@@ -52,7 +52,7 @@ class CyclomaticComplexityComputerTest {
     final Map<MethodSymbol, Integer> methodsComplexity = data.methodsComplexity();
 
     //then
-    MethodSymbol example1 = documentContext.getSymbolTree().getMethods().get(0);
+    MethodSymbol example1 = documentContext.getSymbolTree().getMethods().getFirst();
     Integer example1Complexity = methodsComplexity.get(example1);
     assertThat(example1Complexity).isEqualTo(12);
 
