@@ -71,7 +71,7 @@ class DiagnosticInfoTest {
 
     Assertions.assertThat(diagnosticInfo.getDefaultConfiguration()).isNotEmpty();
 
-    var parameter = diagnosticInfo.getParameters().get(0);
+    var parameter = diagnosticInfo.getParameters().getFirst();
     assertThat(parameter.getDescription())
       .isEqualTo("Считать комментарий в блоке кодом");
 
@@ -124,7 +124,7 @@ class DiagnosticInfoTest {
     Assertions.assertThat(diagnosticInfo.getParameters()).hasSize(1);
     Assertions.assertThat(diagnosticInfo.canLocateOnProject()).isFalse();
 
-    var parameter = diagnosticInfo.getParameters().get(0);
+    var parameter = diagnosticInfo.getParameters().getFirst();
     assertThat(parameter.getDescription())
       .isEqualTo("Заявленные языки");
 
@@ -168,7 +168,7 @@ class DiagnosticInfoTest {
     var diagnosticEnInfo = new DiagnosticInfo(EmptyCodeBlockDiagnostic.class, configuration, stringInterner);
 
     // then
-    assertThat(diagnosticEnInfo.getParameters().get(0).getDescription())
+    assertThat(diagnosticEnInfo.getParameters().getFirst().getDescription())
       .isEqualTo("Comment as code");
   }
 }
